--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,109 +1,93 @@
-.form-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.frame {
-  display: flex;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  overflow: hidden;
-}
-
-.image-container {
-  flex: 1;
+.loginsignup {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100vh;
+  background: #d0d1db;
+  padding-top: 8px;
 }
 
-.image {
-  max-width: 500px;
-  max-height: 500px;
-}
-
-.form-wrapper {
-  flex: 1;
-  padding: 20px;
-}
-
-.form {
+.loginsignup-container {
   display: flex;
   flex-direction: column;
-}
-
-.input-block {
-  position: relative;
-  margin-bottom: 20px;
-}
-
-.input-block input {
-  font-weight: 500;
-  font-size: 1.4rem; /* Réduire la taille des champs */
-  color: #495055;
-  width: 100%;
-  padding: 10px; /* Réduire le padding */
-  border-radius: 8px; /* Augmenter le border-radius */
-  border: 2px solid #D9D9D9;
-  outline: none;
-}
-
-.input-block span.placeholder {
-  position: absolute;
-  margin: 12px 0;
-  padding: 0 4px;
-  font-family: Roboto, sans-serif;
-  color: #6c757d;
-  display: flex;
   align-items: center;
-  font-size: 1.4rem;
-  top: 0;
-  left: 15px;
-  transition: all 0.2s;
-  transform-origin: 0% 0%;
+  width: 50%;
+  background: white;
+  padding: 20px 30px;
+}
+
+.loginsignup-container h1 {
+  margin: 10px 0;
+}
+
+.input-group {
+  position: relative;
+  width: 100%; /* Ajuster la largeur du groupe de saisie */
+}
+
+.input {
+  border: solid 1.5px #9e9e9e;
+  border-radius: 0; /* Retirer le border-radius pour rendre les champs rectangulaires */
   background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: #f5f5f5;
+  transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%; /* Ajuster la largeur du champ de saisie */
+}
+
+.user-label {
+  position: absolute;
+  left: 15px;
+  color: #e8e8e8;
   pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-block input:valid + span.placeholder,
-.input-block input:focus + span.placeholder {
-  transform: scale(0.8) translateY(-15px); /* Réduire le déplacement Y */
-  background: #fff;
+.input:focus,
+.input:valid {
+  outline: none;
+  border: 1.5px solid #000000;
 }
 
-.input-block input:focus {
-  color: #284B63;
-  border-color: #284B63;
+.input:focus ~ .user-label,
+.input:valid ~ .user-label {
+  transform: translateY(-50%) scale(0.8);
+  background-color: #ffffff;
+  padding: 0 .2em;
+  color: #000000;
 }
 
-.input-block input:focus + span.placeholder {
-  color: #284B63;
-}
-
-.submit-button {
-  padding: 10px 20px;
-  background-color: #343536;
-  color: #fff;
+.loginsignup-container button {
+  width: 100%;
+  height: 50px;
+  color: white;
+  background: #000000;
+  margin-top: 30px;
   border: none;
-  border-radius: 4px;
+  font-size: 20px;
+  font-weight: 300;
   cursor: pointer;
 }
 
-.submit-button:hover {
-  background-color: #000000;
+.loginsignup-login span {
+  color: #8593b3;
+  font-weight: 500;
 }
 
-/* Boutons Femme et Homme */
-.gender-buttons {
+.loginsignup-agree {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-  border-radius: 8px; /* Augmenter le border-radius */
+  align-items: center;
+  margin-top: 25px;
+  gap: 20px;
+  color: #5c5c5c;
+  font-size: 12px;
+  font-weight: 500;
 }
 
-.gender-buttons button {
-  flex: 1;
-  margin-right: 10px;
-  border-radius: 8px; /* Augmenter le border-radius */
+/* Ajout d'espace entre les champs de saisie */
+.input-group:not(:last-child) {
+  margin-bottom: 20px;
 }
